# serde-redis-stream

./: Cargo.toml
serde-redis-stream/: Cargo.toml
serde-redis-stream-derive/: Cargo.toml
serde-redis-stream-derive/src/: lib.rs
serde-redis-stream-derive/tests/: it_compiles.rs  it_compiles_option.rs  test.rs
serde-redis-stream-interface/: Cargo.toml
serde-redis-stream-interface/src/: lib.rs
serde-redis-stream-tests/: Cargo.toml
serde-redis-stream-tests/tests/: it_compiles.rs
serde-redis-stream/src/: lib.rs
serde-redis-stream/tests/: it_compiles.rs
