[package]
name = "serde-redis-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
serde = "1.0"
syn = "2"
quote = "1"
darling = "0.20"

[lib]
proc-macro = true
path = "./serde-redis-stream-derive/src/lib.rs"