[package]
name = "serde-redis-stream-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version="0.23.0",features = ["tokio-comp", "aio"] }
serde = "1.0"
tokio = {version="1.28.2", features = ["full"] }
